# dot-organize

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: CONTRIBUTING.md
examples/: complex.yaml  file_based.yaml  minimal.yaml  typical.yaml
scripts/: bootstrap.py  bootstrap.sh  bump.py  bump.sh
specs/001-manifest-builder/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-manifest-builder/checklists/: constraints.md  full-review.md  requirements.md
specs/001-manifest-builder/contracts/: manifest-schema.json
specs/001-manifest-builder/research/: README.md  hypothesis-testing-research.md  interactive-wizard-example.py  interactive-wizard-research.md  json-schema-integration-test.py  json-schema-validation-research.md  json-schema-validation-test.py  pydantic-v2-frozen-models-research.md  ruamel-yaml-research.md  sqlglot-expression-validation-research.md  typer-cli-research.md  typer-cli-skeleton.py  uv-package-manager-research.md
specs/002-release-engineering/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-release-engineering/checklists/: requirements.md
src/dot/: __init__.py
src/dot/cli/: __init__.py  examples.py  init.py  main.py  validate.py
src/dot/core/: __init__.py  expression.py  normalization.py  registry.py  rules.py  validation.py
src/dot/io/: __init__.py  json.py  yaml.py
src/dot/models/: __init__.py  concept.py  diagnostic.py  frame.py  keyset.py  manifest.py  settings.py
tests/: conftest.py
tests/fixtures/invalid/: .gitkeep  both_relation_and_path.yaml  duplicate_concept_name.yaml  duplicate_hook_name.yaml  empty_expr.yaml  empty_relation.yaml  forbidden_expr_select.yaml  invalid_concept_name.yaml  invalid_frame_name.yaml  invalid_hook_name.yaml  invalid_hook_role.yaml  invalid_manifest_version.yaml  invalid_schema_version.yaml  invalid_source_case.yaml  missing_hook_fields.yaml  missing_hooks.yaml  missing_primary_hook.yaml  missing_source.yaml  short_concept_description.yaml  unused_concept.yaml
tests/fixtures/valid/: .gitkeep  composite_grain.yaml  file_based.yaml  key_alias.yaml  minimal.yaml
tests/fixtures/warn/: .gitkeep  unknown_fields.yaml
tests/integration/: test_cli_examples.py  test_cli_init.py  test_cli_init_noninteractive.py  test_cli_validate.py  test_io_roundtrip.py
tests/performance/: test_validation_benchmarks.py
tests/unit/: test_expression.py  test_json_io.py  test_models.py  test_normalization.py  test_registry.py  test_rules.py  test_rules_warn.py  test_yaml_io.py
