[project]
name = "dot-organize"
version = "0.1.0"
description = "Validate and create HOOK manifests for data modeling"
authors = [
    { name = "Mattias Thalén", email = "bitter-polders0x@icloud.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["data-modeling", "manifest", "validation", "cli", "hook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "ruamel.yaml>=0.18.0",
    "questionary>=2.0.0",
]

[project.scripts]
dot = "dot.cli.main:app"

[project.urls]
Homepage = "https://github.com/mattiasthalen/dot-organize"
Repository = "https://github.com/mattiasthalen/dot-organize"
Issues = "https://github.com/mattiasthalen/dot-organize/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dot"]

[tool.hatch.build.targets.wheel.sources]
"examples" = "dot/examples"

[tool.hatch.build.targets.sdist]
include = [
    "src/dot/**",
    "examples/**",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/dot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
