[project]
name = "dot-organize"
dynamic = ["version"]
description = "dot - Data Organize Tool for validating and creating manifests using the HOOK methodology"
authors = [
    { name = "Mattias Thalén", email = "bitter-polders0x@icloud.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["data-modeling", "manifest", "validation", "cli", "hook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "ruamel.yaml>=0.18.0",
    "questionary>=2.0.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
dot = "dot.cli.main:app"

[project.urls]
Homepage = "https://github.com/mattiasthalen/dot-organize"
Repository = "https://github.com/mattiasthalen/dot-organize"
Issues = "https://github.com/mattiasthalen/dot-organize/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "guess-next-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/dot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dot"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "dot/examples"

[tool.hatch.build.targets.sdist]
include = [
    "src/dot/**",
    "examples/**",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-pyyaml>=6.0.12.20250915",
    "pytest-cov>=7.0.0",
]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/dot/_version.py"]  # Auto-generated by hatch-vcs

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line too long - we allow longer lines for user-facing messages
    "B008",   # Function call in default argument - required by typer patterns
    "B904",   # raise from within except - typer.Exit doesn't need chain
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/dot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
